kubernetes-monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-myapp
  namespace: homework
spec:
  selector:
    app: myapp
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: myapp-port
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-prometheus-exporter
  labels:
    app: nginx-prometheus-exporter
spec:
  ports:
    - name: http-mon
      port: 9113
      protocol: TCP
      targetPort: 9113
  selector:
    app: nginx-prometheus-exporter
