kubernetes-monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: homework
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-myapp
            port:
              number: 80
